# p2p-onchain

./: .dockerignore  .gitignore  Cargo.toml  README.md
programs/p2p-protocol/: Cargo.toml
programs/p2p-protocol/src/: error.rs  events.rs  lib.rs
programs/p2p-protocol/src/instructions/: cancel_order.rs  create_market.rs  expire_order.rs  fill_order.rs  mod.rs  place_order.rs
programs/p2p-protocol/src/state/: market.rs  order.rs
services/: .env.example  docker-compose.yml
services/api/: Cargo.toml  Dockerfile  railway.toml
services/api/src/: config.rs  main.rs
services/api/src/routes/: events.rs  health.rs  markets.rs  mod.rs  orders.rs  stats.rs
services/indexer/: Cargo.toml  Dockerfile  railway.toml
services/indexer/src/: config.rs  db.rs  decoder.rs  listener.rs  main.rs  sync.rs
services/migrations/: 001_initial.sql
