[workspace]
members = [
    "programs/p2p-protocol",
    "services/indexer",
    "services/api",
]
resolver = "2"

[workspace.dependencies]
pinocchio = { version = "0.11.1", features = ["cpi"] }
pinocchio-token = "0.6.0"
pinocchio-system = "0.6.1"
pinocchio-log = "0.5.1"
solana-address = "2.0"
solana-program-error = "3.0"

# off-chain services
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "macros"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
