[package]
name    = "p2p-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio              = { workspace = true }
axum               = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
sqlx               = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http         = { version = "0.6", features = ["cors"] }
dotenvy            = "0.15"
