[package]
name    = "p2p-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
sqlx               = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest            = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite  = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util       = "0.3"
base64             = "0.22"
bs58               = "0.5"
dotenvy            = "0.15"
